package behavioural.observer.CA4;

public interface TopicListener{
    void listen(TinTuc t);
}
