@startuml

class Topic{
    -List<TinTuc> list
    +void dangKy(TopicListener listeners)
    +void huyDangKy(TopicListener listeners)
    +void themMoi(TinTuc t);
    +void capNhat(TinTuc t);
}

interface TopicListener{
    +void listen(TinTuc t)
}

class ThanhVienA
class ThanhVienB{
    List<TinTuc> list
}

TopicListener <|.. ThanhVienA
TopicListener <|.. ThanhVienB
Topic o--> TopicListener : listeners
ThanhVienA --> Topic : topic
ThanhVienB --> Topic : topic

@enduml